--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = "mongodb+srv://coderone1:2cDJJlm6OBLMvkIZ@cluster0.v1zzyeq.mongodb.net/mern-blog?retryWrites=true&w=majority&appName=Cluster0"
-
+MONGO_URI = mongodb+srv://coderone1:2cDJJlm6OBLMvkIZ@cluster0.v1zzyeq.mongodb.net/mern-blog?retryWrites=true&w=majority&appName=Cluster0;
+MONGO_URII = "mongodb+srv://coderone1:2cDJJlm6OBLMvkIZ@cluster0.v1zzyeq.mongodb.net/"
 JWT_SECRET = 'xxxx'
