--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
